@startuml
skinparam classAttributeIconSize 0

class Company {
-designation
}
class Test {
-testCode
-nhsCode
-createdAt
-designation
-dateAnalysis
-timeAnalysis
-dateDiagnosis
-timeDiagnosis
-dateValidation
-timeValidation
}
class Client {
-name
-cardNumber
-birthDate
-sex
-nhsID
-TIF
-phoneNumber
-email
-password
}
class TestType {
-code
-description
}
class Parameter {
-code
-shortName
-description
}
class Client {
-name
-cardNumber
-birthDate
-sex
-nhsID
-TIF
-phoneNumber
-email
-password
}



TestType "1"--"1..*" Parameter : has >
(Test, Parameter) .. TestParameter
Test "*"--"1" Client : requested by >
TestParameter "*"--"1" Test : has <
Test "*"-up-"1" Company : performs <
Test "*"-right-"1" "TestType" : is of >
TestParameter "*"--"1" Parameter : associated to >

@enduml